# ai-meter

.github/workflows/: build.yaml  build.yml  manual-update-webinstaller.yaml
code/: CMakeLists.txt  platformio.ini  sdkconfig.defaults
code/components/allexok_battery_adc/: CMakeLists.txt  battery_adc.h
code/components/allexok_lorawan/: CMakeLists.txt  i2c_shuttle.c  i2c_shuttle.h  lorawan_publish.cpp
code/components/jomjol_controlcamera/: ClassControllCamera.cpp
code/components/jomjol_flowcontroll/: CMakeLists.txt  ClassFlowControll.cpp  ClassFlowControll.h  ClassFlowLorawan.cpp  ClassFlowLorawan.h  ClassFlowMQTT.cpp  ClassFlowMQTT.h  ClassFlowPostProcessing.cpp  MainFlowControl.cpp
code/components/jomjol_helper/: Helper.cpp  statusled.cpp
code/components/jomjol_logfile/: CMakeLists.txt  ClassLogFile.cpp  ClassLogFile.h
code/components/jomjol_mqtt/: interface_mqtt.cpp  server_mqtt.cpp
code/components/jomjol_tfliteclass/: CMakeLists.txt
code/components/jomjol_time_sntp/: CMakeLists.txt  time_sntp.cpp
code/components/jomjol_wlan/: CMakeLists.txt  connect_wlan.cpp
code/components/tflm_wrapper/: CMakeLists.txt
code/include/: defines.h
code/main/: CMakeLists.txt  version_fallback.cpp
sd-card/config/: config.ini
sd-card/demo/: config.ini
sd-card/html/: edit_config_template.html  edit_reference.html  readconfigparam.js
webinstaller/: manifest.json
